# cmux-remote-tui

./: .coverage  .gitignore  ARCHITECTURE.md  CHANGELOG.md  README.md  install.sh  project_update.md  pyproject.toml
.github/workflows/: ci.yml
.planning/: PHASE-v0.2-SOTA-TUI-LLM.md  ROADMAP.md
cmux_remote_tui/: __init__.py  __main__.py  agent.py  client.py  llm.py  textual_app.py  tui.py
cmux_remote_tui/application/: orchestrator.py
cmux_remote_tui/domain/: __init__.py  models.py  parser.py  protocols.py
cmux_remote_tui/infrastructure/: cmx_client.py  llm_providers.py
scripts/: cmux-remote-tui  publish-github.sh
tests/: conftest.py
tests/integration/: test_agent_protocol.py
tests/unit/: test_domain.py  test_llm.py  test_orchestrator.py  test_parser.py
