[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cmux-remote-tui"
version = "0.1.0"
description = "A fast, fluid TUI to control the cmux terminal on another machine over SSH — browse, fuzzy-find, preview, and attach to remote terminals live."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Wojciech Wiesner" }]
keywords = ["cmux", "tui", "terminal", "ssh", "remote", "curses", "tmux", "coding-agents", "manaflow"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console :: Curses",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Terminals",
    "Topic :: Utilities",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/vizi2000/cmux-remote-tui"
Repository = "https://github.com/vizi2000/cmux-remote-tui"
Issues = "https://github.com/vizi2000/cmux-remote-tui/issues"

[project.scripts]
cmux-remote = "cmux_remote_tui.client:_console"

[tool.hatch.build.targets.wheel]
packages = ["cmux_remote_tui"]
