[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cmux-remote-tui"
version = "0.2.0"
description = "A state-of-the-art remote TUI for cmux — browse, fuzzy-find, preview, attach, and LLM-powered synthesis over SSH."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Wojciech Wiesner" }]
keywords = ["cmux", "tui", "terminal", "ssh", "remote", "curses", "tmux", "coding-agents", "manaflow"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console :: Curses",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Terminals",
    "Topic :: Utilities",
]
dependencies = [
    "textual>=0.80.0",  # SOTA reactive TUI framework for beautiful, interactive, mouse+keyboard UI
    "rich>=13.0.0",     # Already powerful with Textual for ANSI, tables, etc.
]

[project.urls]
Homepage = "https://github.com/vizi2000/cmux-remote-tui"
Repository = "https://github.com/vizi2000/cmux-remote-tui"
Issues = "https://github.com/vizi2000/cmux-remote-tui/issues"

[project.scripts]
cmux-remote = "cmux_remote_tui.client:_console"
cmux-remote-tui = "cmux_remote_tui.textual_app:run_app"  # new SOTA Textual entrypoint (v0.2+)

[tool.hatch.build.targets.wheel]
packages = ["cmux_remote_tui"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["cmux_remote_tui"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 25
